############################
testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

IMPROVEMENTS
------------

* ``testr run`` now accepts a --concurrency option, allowing command line
  override of the number of workers spawned. This allows conccurency on
  operating systems where autodetection is not yet implemented, or just
  debugging problems with concurrent test suites. (Robert Collins, #957145)

* ''test_id_list_default'' would prevent ''test_list_option'' being used in
  previous releases. For Python environments where the context to load tests
  from is always needed this was not an issue (and thus not uncovered). However
  given a test runner which wants either a global context or a list of specific
  tests with no global context, there was no way to achieve that with this bug.
  (Robert Collins, #1027042)


0.0.6
+++++

CHANGES
-------

* Now relies on subunit 0.0.8 or better and testtools 0.9.15 or better.

IMPROVEMENTS
------------

* Much better handling of unicode input from subunit streams.  Specifically,
  we won't crash when we can't figure something out.  (Francesco Banconi,
  Martin Packman, #955006)

* Parallel tests now record their worker thread number as tags in tests.
  This makes identifying test ordering problems much easier.
  (Benji York, #974622)

* Python2.7 changed the interface for DBM, this has been worked around.
  (Robert Collins, #775214, #961103)

* Subunit 0.0.7 Changes its TestResultFilter implementation, requiring the
  subclass in testrepository.filter to be come more robust.
  (Robert Collins)

* A horrible thinko in the testrepository test suite came to light and has been
  fixed. How the tests ever ran is a mystery. (Robert Collins, #881497)

* ''failing'', ''run'' and ''load'' now both take a ''--subunit'' option, which
  displays output in raw subunit format.  If ''--full-results'' is passed too,
  then all subunit information is displayed.  (Brad Crittenden, #949950)
